--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="all">
       <div id="logo">
-        <img id="logopic" src="/img/logo.png" />
+        <div id="logotxt">Rock Paper Scissors</div>
       </div>
       <div id="container">
         <div id="choices">
